<resources>
    <string name="app_name">Lesson_1</string>

    <string name="eml">Email</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="pass">Пароль</string>
    <string name="pass_confirm">Подтверждение пароля</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="write">Напишите сюда…</string>

    <string name="albums">Albums</string>
    <string name="users">Users</string>
    <string name="post">CreatePost</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="send">Send</string>

</resources>