<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatPostFragment"
    android:padding="30dp"
    android:orientation="vertical"
    android:gravity="center"
    >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_edit_text"
        android:hint="@string/title"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/body_edit_text"
        android:hint="@string/body"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/sendbtn"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_green"
        android:layout_marginBottom="10dp"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back3"
        android:textAllCaps="false"
        android:backgroundTint="@color/dark_gray"
        />

</LinearLayout>