<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:padding="30dp"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/albums"
        android:id="@+id/albums"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_green"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/users"
        android:id="@+id/users"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_green"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:id="@+id/post"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_green"
        />


</LinearLayout>